# webscrapper-client-python

./: .gitignore  README.md  setup.cfg  setup.py
src/webscrapper/: client.py
