[metadata]
# replace with your username:
name = webscrapper
version = 0.0.2
author = webii
author_email = webii@pm.me
description = Simple wrapper for Web scrapper API https://scrapper.scurra.space/
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pi11/webscrapper-client-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
